--- a/format.html
+++ b/format.html
@@ -21,16 +21,141 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://www.dropbox.com/s/tvf3ry61i48lr54/styles.css" />
 
-    <link rel="stylesheet" href="" />
 </head>
 
 <body>
 
-    {{{body}}}
-    {{!-- <nav class="navbar navbar-light blue lighten-4">
-  <span class="navbar-brand">Heading</span>
-</nav>
- --}}
+    <!-- DIV -->
+
+    <style>
+        html,
+        body,
+        header,
+        .view {
+            height: 100%;
+        }
+    </style>
+
+    <!-- Main navigation -->
+    <header>
+
+        <!-- Full Page Intro -->
+        <div class="view deep-purple darken-3">
+            <!-- Mask & flexbox options-->
+            <div class="mask">
+                <!-- Content -->
+                <div class="container h-100">
+                    <!--Grid row-->
+                    <div class="row align-items-center h-100">
+                        <!--Grid column-->
+                        <div class="col-md-6 wow fadeInLeft" data-wow-delay="0.2s">
+                            <h1 class="white-text mb-4">Category</h1>
+                            <p class="mb-4 pb-2 white-text">What are the good things you learnt from your mother? And your father?
+
+
+                            </p>
+                            <button type="button" class="btn btn-outline-white btn-md ml-md-0">Favorite</button>
+                            <button type="button" class="btn btn-white btn-md">Next Question</button>
+                        </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-md-6 wow fadeInRight" data-wow-delay="0.2s">
+                            <img src="https://mdbootstrap.com/img/Mockups/Transparent/Small/cards2.png" alt="" class="img-fluid">
+                        </div>
+                        <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+                </div>
+                <!-- Content -->
+            </div>
+            <!-- Mask & flexbox options-->
+        </div>
+        <!-- Full Page Intro -->
+
+    </header>
+    <!-- Main navigation -->
+    <!-- END DIV -->
+    <!-- DIV -->
+    <!-- Beginning of Label and Input -->
+    <label for="NAME">Password</label>
+    <input id="NAME" name="NAME" placeholder="NAME" type="password" class="form-control" aria-describedby="smallText">
+    <small id="smallText" class="form-text text-muted">
+        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces,
+        special characters,
+        or emoji.
+    </small>
+    <!-- Ending of Label and Input -->
+
+
+    <!-- DIV -->
+    <!-- progress bar start -->
+    <div class="d-flex justify-content-between">
+        <small class="text-muted">XP</small>
+        <small><span><strong>30</strong></span>/<span></span>168</small> strength
+    </div>
+    <div class="progress md-progress">
+        <div class="progress-bar bg-info" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <!-- progress abr end -->
+
+    <br /><br />
+    <div class="row">
+        <div class="col">
+            <!-- yellow card start -->
+            <!-- Card Yellow -->
+            <div class="card classic-admin-card warning-color">
+                <div class="card-body py-3">
+                    <i class="fas fa-chart-line"></i>
+                    <p class="small">ryry</p>
+                    <h4>ryan cheung</h4>
+                </div>
+                <div class="container">
+                    <div class="d-flex justify-content-between">
+                        <small class="text-muted">XP</small>
+                        <small><span><strong>30</strong></span>/<span></span>168</small> strength
+                    </div>
+                    <div class="progress md-progress">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="card-body pt-2 pb-3">
+                    <p class="small mb-0">attention is </p>
+                </div>
+            </div>
+            <!-- Card Yellow -->
+
+            <!-- yellow card end -->
+        </div>
+        <div class="col">
+            <!-- yellow card start -->
+            <!-- Card Yellow -->
+            <div class="card classic-admin-card warning-color">
+                <div class="card-body py-3">
+                    <i class="fas fa-chart-line"></i>
+                    <p class="small">ryry</p>
+                    <h4>ryan cheung</h4>
+                </div>
+                <div class="container">
+                    <div class="d-flex justify-content-between">
+                        <small class="text-muted">XP</small>
+                        <small><span><strong>30</strong></span>/<span></span>168</small> strength
+                    </div>
+                    <div class="progress md-progress">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="card-body pt-2 pb-3">
+                    <p class="small mb-0">attention is </p>
+                </div>
+            </div>
+            <!-- Card Yellow -->
+
+            <!-- yellow card end -->
+        </div>
+    </div>
+
+
     <nav class="navbar fixed-bottom navbar-light white lighten-4">
         <a class="navbar-brand" href="/"><svg width="1em" height="1em" viewBox="0 1 16 16" class="bi bi-house" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
